# xkised00-Bachelor-thesis-implementation

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
deploy/: Caddyfile
scripts/: qdrant_connectivity_check.py
src/app/: main.py
src/app/api/: documents.py  jobs.py  query.py
src/app/core/: settings.py
src/app/embeddings/: __init__.py  adapter.py  providers.py
src/app/generation/: adapter.py  prompt_builder.py  providers.py  service.py
src/app/ingestion/: chunker.py  extractors.py  indexing_pipeline.py
src/app/retrieval/: service.py
src/app/storage/: document_repository.py  indexing_repository.py  qdrant_store.py  sqlite_schema.py
src/app/ui/: index.html
tests/: helpers.py  test_answer_api.py  test_api.py  test_chunker.py  test_documents_api.py  test_embedding_adapter.py  test_extractors.py  test_generation.py  test_generation_prompt_builder.py  test_generation_service.py  test_health.py  test_indexing_pipeline.py  test_jobs_api.py  test_lexical_retrieval.py  test_qdrant_store.py  test_query_api.py  test_retrieval.py  test_retrieval_service.py  test_settings.py  test_sqlite_schema.py
